tests/res/dict/duplicate_key.say
say d = { a: 1, a: 2 }; // error: Duplicate dict key 'a'
